--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             font-family: Arial, sans-serif;
         }
         .calendar-container {
-            background: #22272d;
+            background: rgb(25, 25, 25);
             color: #adbac7;
             border-radius: 3px;
             padding: 1rem;
