--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background: #242424; /* Added black background */
+            color: #adbac7; /* Added light text color for better contrast */
         }
         .calendar-container {
-            background: rgb(25, 25, 25);
-            color: #adbac7;
+            background: #242424; /* Changed back to dark */
+            color: #adbac7; /* Changed back to light color */
             border-radius: 3px;
             padding: 1rem;
             overflow: hidden;
             margin-bottom: 20px;
-            position: relative; /* Add this */
-            padding-bottom: 40px; /* Increase padding to accommodate buttons and legend */
+            position: relative;
+            padding-bottom: 40px;
         }
         .button-legend-container {
             position: absolute;
@@ -45,8 +47,8 @@
         .button {
             display: inline-block;
             padding: 5px 10px;
-            background-color: #444c56;
-            color: #adbac7;
+            background-color: #444c56; /* Changed back to dark */
+            color: #adbac7; /* Changed back to light color */
             text-decoration: none;
             border-radius: 3px;
             font-size: 12px;
