--- a/index.html
+++ b/index.html
@@ -95,41 +95,43 @@
     </style>
 </head>
 <body>
-    <div class="calendar-container">
-        <h2>Fitness Calendar</h2>
-        <div id="fitness-calendar" class="margin-bottom--md"></div>
-        <div class="button-legend-container">
-            <div class="button-container">
-                <a href="#" class="button" id="fitness-prev-button">← Previous</a>
-                <a href="#" class="button" id="fitness-next-button">Next →</a>
-            </div>
-            <div class="legend-container">
-                <span class="legend-label">Less</span>
-                <div id="fitness-legend" style="display: inline-block; margin: 0 4px;"></div>
-                <span class="legend-label">More</span>
+    <div class="calendar-row">
+        <div class="calendar-container half-width">
+            <h2>Fitness Calendar</h2>
+            <div id="fitness-calendar" class="margin-bottom--md"></div>
+            <div class="button-legend-container">
+                <div class="button-container">
+                    <a href="#" class="button" id="fitness-prev-button">← Previous</a>
+                    <a href="#" class="button" id="fitness-next-button">Next →</a>
+                </div>
+                <div class="legend-container">
+                    <span class="legend-label">Less</span>
+                    <div id="fitness-legend" style="display: inline-block; margin: 0 4px;"></div>
+                    <span class="legend-label">More</span>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="calendar-container">
-        <h2>Projects Calendar</h2>
-        <div id="projects-calendar" class="margin-bottom--md"></div>
-        <div class="button-legend-container">
-            <div class="button-container">
-                <a href="#" class="button" id="projects-prev-button">← Previous</a>
-                <a href="#" class="button" id="projects-next-button">Next →</a>
-            </div>
-            <div class="legend-container">
-                <span class="legend-label">Less</span>
-                <div id="projects-legend" style="display: inline-block; margin: 0 4px;"></div>
-                <span class="legend-label">More</span>
+        <div class="calendar-container half-width">
+            <h2>Projects Calendar</h2>
+            <div id="projects-calendar" class="margin-bottom--md"></div>
+            <div class="button-legend-container">
+                <div class="button-container">
+                    <a href="#" class="button" id="projects-prev-button">← Previous</a>
+                    <a href="#" class="button" id="projects-next-button">Next →</a>
+                </div>
+                <div class="legend-container">
+                    <span class="legend-label">Less</span>
+                    <div id="projects-legend" style="display: inline-block; margin: 0 4px;"></div>
+                    <span class="legend-label">More</span>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="calendar-row">
         <div class="calendar-container half-width">
-            <h2>Morning Routine Calendar</h2>
+            <h2>Read Calendar</h2>
             <div id="morning-routine-calendar" class="margin-bottom--md"></div>
             <div class="button-legend-container">
                 <div class="button-container">
